# groupcache

./: .gitignore  Cargo.toml  LICENSE  readme.md  test.sh
.github/: codecov.yaml  dependabot.yml
.github/workflows/: rust.yml
examples/kubernetes-service-discovery/: .dockerignore  Cargo.toml  Dockerfile  readme.md
examples/kubernetes-service-discovery/k8s/: groupcache-powered-backend-deployment.yaml  groupcache-powered-backend-role-binding.yaml
examples/kubernetes-service-discovery/k8s/grafana/: values.yaml
examples/kubernetes-service-discovery/k8s/groupcache-powered-backend/: deployment.yaml  role.yaml  service.yaml
examples/kubernetes-service-discovery/k8s/k6/: k6-load-test.yaml  load-test-job.yaml
examples/kubernetes-service-discovery/k8s/prometheus-community/: values.yaml
examples/kubernetes-service-discovery/src/: cache.rs  k8s.rs  main.rs
examples/simple/: Cargo.toml
examples/simple-multiple-instances/: Cargo.toml
examples/simple-multiple-instances/src/: main.rs
examples/simple/src/: main.rs
groupcache/: Cargo.toml  design.md
groupcache-app/: Cargo.toml
groupcache-app/src/: main.rs
groupcache-pb/: Cargo.toml  build.rs
groupcache-pb/protos/: groupcache.proto
groupcache-pb/src/: groupcache_pb.rs  lib.rs  main.rs
groupcache/src/: errors.rs  groupcache.rs  groupcache_builder.rs  groupcache_inner.rs  http.rs  lib.rs  metrics.rs  options.rs  routing.rs  service_discovery.rs
groupcache/tests/: groupcache_test.rs  integration_test.rs  metrics_test.rs  options_test.rs
groupcache/tests/common/: mod.rs
src/: main.rs
