[workspace]

[workspace.dependencies]
anyhow = "1.0.72"
axum = "0.6.20"
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = "0.11.18"
async-trait = "0.1.72"

[package]
name = "groupcache-app"
version = "0.1.0"
edition = "2021"

[dependencies]
groupcache = { path = "groupcache" }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }

