[workspace]
resolver = "2"
members= [
    "groupcache",
    "groupcache-pb",
    "examples/kubernetes-service-discovery",
    "examples/simple",
    "examples/simple-multiple-instances"
]


[workspace.dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt", "run-for-all"]
