[package]
name = "groupcache-app"
version = "0.1.0"
edition = "2021"

[dependencies]
groupcache = { path = "../groupcache" }
anyhow = "1.0.72"
axum = "0.6.20"
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = "1.0.68"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.72"
tonic = "0.10.0"
