[package]
name = "groupcache-app"
version = "0.1.0"
edition = "2021"

[dependencies]
groupcache = { path = "../groupcache" }

tonic = "0.10.0"
axum = "0.6.20"
tower = { version = "0.4.13", features = ["steer"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tokio = { version = "1.12.0", features = ["full"] }

serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = "1.0.68"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1.0.72"
async-trait = "0.1.72"
