[package]
name = "groupcache-pb"
version = "0.2.0"
edition = "2021"
authors = ["Patryk Wojtyczek"]
categories = ["caching", "web-programming", "concurrency", "asynchronous"]
description = "groupcache protocol buffers - internal crate"
homepage = "https://github.com/Petroniuss/groupcache"
keywords = ["distributed", "cache", "shard", "memcached", "gRPC"]
license = "MIT"
readme = "../readme.md"
repository = "https://github.com/Petroniuss/groupcache"

[dependencies]
prost = "0.12"
tonic = "0.10"
anyhow = "1"
tonic-build = { version= "0.11", features = ["prost"] }
