[package]
name = "groupcache-pb"
version = "0.1.0"
edition = "2021"
authors = ["Patryk Wojtyczek"]
categories = ["caching", "web-programming", "concurrency", "asynchronous"]
description = "groupcache protocol buffers - internal crate"
homepage = "https://github.com/Petroniuss/groupcache"
keywords = ["distributed", "cache", "shard", "memcached", "gRPC"]
license = "MIT"
readme = "../readme.md"
repository = "https://github.com/Petroniuss/groupcache"

[dependencies]
prost = "0.13.3"
tonic = "0.12.3"
anyhow = "1"
tonic-build = { version= "0.12.3", features = ["prost"] }
