[package]
name = "groupcache-pb"
version = "0.3.0"
edition = "2021"
authors = ["Patryk Wojtyczek"]
categories = ["caching", "web-programming", "concurrency", "asynchronous"]
description = "groupcache protocol buffers - internal crate"
homepage = "https://github.com/Petroniuss/groupcache"
keywords = ["distributed", "cache", "shard", "memcached", "gRPC"]
license = "MIT"
readme = "../readme.md"
repository = "https://github.com/Petroniuss/groupcache"

[dependencies]
prost = "0.14.1"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = { version = "0.14.2" }

[build-dependencies]
tonic-prost-build = "*"