[package]
name = "groupcache"
version = "0.1.0"
authors = ["Patryk Wojtyczek"]
edition = "2021"
categories = ["caching", "web-programming", "concurrency", "asynchronous"]
description = """
groupcache is a distributed caching and cache-filling library, \
intended as a replacement for a pool of memcached nodes in many cases. \
It shards by key to select which peer is responsible for that key.\
"""
homepage = "https://github.com/Petroniuss/groupcache"
keywords = ["distributed", "cache", "shard", "memcached", "gRPC"]
license = "MIT"
readme = "../readme.md"
repository = "https://github.com/Petroniuss/groupcache"

[dependencies]
groupcache-pb = { path = "../groupcache-pb", version = "0.1.0" }
tonic = "0.10.2"
hashring = "0.3.3"
anyhow = "1.0"
thiserror = "1.0"
axum = "0.6.20"
tokio = { version = "1.34" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
async-trait = "0.1.74"
singleflight-async = "0.1.1"
moka = { version = "0.12.1", features = ["future"] }
metrics = "0.21.1"

[dev-dependencies]
cargo-husky = { workspace = true }
pretty_assertions = "1.4.0"
tokio-stream = { version = "0.1.14", features = ["net"] }
tokio = { version = "1.34", features = ["time", "test-util", "rt", "macros"] }
rstest = "0.18.2"
serial_test = "2.0.0"
