[package]
name = "groupcache"
version = "0.2.1"
authors = ["Patryk Wojtyczek"]
edition = "2021"
categories = ["caching", "web-programming", "concurrency", "asynchronous"]
description = """
groupcache is a distributed caching and cache-filling library, \
intended as a replacement for a pool of memcached nodes in many cases. \
It shards by key to select which peer is responsible for that key.\
"""
homepage = "https://github.com/Petroniuss/groupcache"
keywords = ["distributed", "cache", "shard", "memcached", "gRPC"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/Petroniuss/groupcache"

[dependencies]
groupcache-pb = { path = "../groupcache-pb", version = "0.2.0" }
tonic = "0.14.2"
hashring = "0.3.3"
anyhow = "1.0"
thiserror = "2.0"
axum = "0.8.0"
tokio = { version = "1.34" , features = ["rt"]}
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
async-trait = "0.1.74"
singleflight-async = "0.2.0"
moka = { version = "0.12.1", features = ["future"] }
log = "0.4.20"
metrics = "0.24.0"

[dev-dependencies]
cargo-husky = { workspace = true }
pretty_assertions = "1.4.0"
tokio-stream = { version = "0.1.14", features = ["net"] }
tokio = { version = "1.34", features = ["time", "test-util", "rt", "macros"] }
rstest = "0.26.1"
