[package]
name = "kubernetes-service-discovery"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# This pulls version from main branch so that docker build works (docker was confused by paths)
# Uncomment this line and delete the next one, when trying to build the example with docker.
#groupcache = { git = "https://github.com/Petroniuss/groupcache.git" }
groupcache = { path = "../../groupcache" }
tonic = "0.10"
axum = "0.6"

tower = { version = "0.4", features = ["steer"] }
tower-http = { version = "0.4", features = ["trace"] }
tokio = { version = "1.34", features = ["full"] }

serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-prometheus = "0.4"

anyhow = "1"
async-trait = "0.1"

kube = { version = "0.87.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.1", features = ["latest"] }
