[package]
name = "kubernetes-service-discovery"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# This pulls version from main branch so that docker build works (docker was confused by paths)
#groupcache = { git = "https://github.com/Petroniuss/groupcache.git" }
groupcache = { path = "../../groupcache" }
tonic = "0.14.2"
axum = "0.8.0"

tower = { version = "0.5.1", features = ["steer"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tokio = { version = "1.34", features = ["full"] }

serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-prometheus = "0.9.0"

anyhow = "1"
async-trait = "0.1"

kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", features = ["latest"] }
