[package]
name = "simple"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
groupcache = { git = "https://github.com/Petroniuss/groupcache.git" }

tokio = { version = "1.34", features = ["full"] }
serde = { version = "1", features = ["derive", "rc"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1"
async-trait = "0.1"
